[package]
name = "json2csv"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.26", features = ["derive"] }
csv = "1.1.6"
indexmap = { version = "1.9.2", features = ["serde-1"] }
serde = { version = "1.0.147", default-features = false }
serde_json = { version = "1.0.89", features = ["preserve_order"] }
unescape = "0.1.0"
